--- a/src/app/user-components/user-list/user-list.component.html
+++ b/src/app/user-components/user-list/user-list.component.html
@@ -1,21 +1,60 @@
 <a mat-fab color="primary" aria-label="Add new user" href="/create">
     <mat-icon>add</mat-icon>
 </a>
-
-<table mat-table [dataSource]="users">
+<!--
+<table mat-table>
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        <td  *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td  *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
     <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        <td  *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
+    <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef> Edit </th>
+        <td  *matCellDef="let element"> 
+            <a mat-fab color="accent" aria-label="Edit user" href="/edit/{{element.id}}">
+                <mat-icon>edit</mat-icon>
+            </a> 
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef> Delete </th>
+        <td  *matCellDef="let element"> 
+            <button mat-fab color="warn" aria-label="Delete user" type="button" (click)="this.deleteUser(element)">
+                <mat-icon>delete</mat-icon>
+            </button> 
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+-->
+<table>
+    <tbody>
+        <tr>
+            <th *ngFor="let column of displayedColumns">{{column}}</th>
+        </tr>
+        <tr *ngFor="let user of users">
+            <td>{{user.id}}</td>
+            <td>{{user.name}}</td>
+            <td>{{user.email}}</td>
+            <td>
+                <a mat-fab color="accent" aria-label="Edit user" href="/edit/{{user.id}}">
+                    <mat-icon>edit</mat-icon>
+                </a>
+            </td>
+            <td>
+                <button mat-fab color="warn" aria-label="Delete user" type="button" (click)="this.deleteUser(user)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </tr>
+    </tbody>
 </table>
