--- a/src/app/user-components/user-list/user-list.component.html
+++ b/src/app/user-components/user-list/user-list.component.html
@@ -1,6 +1,9 @@
 <a mat-fab color="primary" aria-label="Add new user" href="/create">
     <mat-icon>add</mat-icon>
 </a>
+<button mat-fab color="primary" aria-label="Clear user list" (click)="this.clearUsers()">
+    <mat-icon>clear_all</mat-icon>
+</button>
 <!--
 <table mat-table>
     <ng-container matColumnDef="id">
