--- a/src/app/components/restriction-components/restriction-list/restriction-list.component.html
+++ b/src/app/components/restriction-components/restriction-list/restriction-list.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let user of users" style="margin: 3rem 0rem;">
-    <p><b>{{user.name}}</b> should not give to: <label *ngFor="let restriction of user.restrictions">{{users[restriction].name}} </label></p>
+    <p><b>{{user.name}}</b> should not give to:</p>
     <mat-select multiple style="border: solid 1px black;">
-        <mat-option *ngFor="let option of users" (onSelectionChange)="onSelect(user, option)">{{option.name}}</mat-option>
+        <mat-option [disabled]="user.id === option.id" [value]="option" *ngFor="let option of users" (onSelectionChange)="onSelect(user, option)">{{option.name}}</mat-option>
     </mat-select>
 </div>
 
