--- a/src/app/components/user-components/user-list/user-list.component.html
+++ b/src/app/components/user-components/user-list/user-list.component.html
@@ -1,10 +1,10 @@
-<a mat-fab color="primary" aria-label="Add new user" href="/create" style="margin-right: 1rem;">
+<a mat-fab color="primary" aria-label="Add new user" href="/create" class="mr-1">
     <mat-icon>add</mat-icon>
 </a>
 <button mat-fab color="primary" aria-label="Clear user list" (click)="this.clearUsers()">
     <mat-icon>clear_all</mat-icon>
 </button>
-<table style="margin: 3rem 0rem;">
+<table class="mtb-3">
     <tbody>
         <tr>
             <th *ngFor="let column of displayedColumns">{{column}}</th>
