--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mr-1 {
+    margin-right: 1rem;
+}
+
+.mtb-3 {
+    margin: 3rem 0rem;
+}
