--- a/src/app/components/restriction-components/restriction-list/restriction-list.component.html
+++ b/src/app/components/restriction-components/restriction-list/restriction-list.component.html
@@ -1,8 +1,10 @@
 <div *ngFor="let user of users" class="mtb-3">
     <p><b>{{user.name}}</b> should not give to:</p>
-    <mat-select multiple class="select-border">
-        <mat-option [disabled]="user.id === option.id" [value]="option" *ngFor="let option of users" (onSelectionChange)="onSelect(user, option)">{{option.name}}</mat-option>
-    </mat-select>
+    <mat-form-field>
+        <mat-select multiple class="select-border">
+            <mat-option [disabled]="user.id === option.id" [value]="option" *ngFor="let option of users" (onSelectionChange)="onSelect(user, option)">{{option.name}}</mat-option>
+        </mat-select>
+    </mat-form-field>
 </div>
 
 <a mat-flat-button color="primary" aria-label="Add restrictions" href="/result">
