--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin-right: 1rem;
 }
 
+.mb-3 {
+    margin-bottom: 3rem;
+}
+
 .mtb-3 {
     margin: 3rem 0rem;
 }
